feat: 🎸 add bin/commonignore and index as api entry
Added bin/commonignore which points to /dist/cli which executes
commonignore at process.cwd(). Exposed the API functions on index as a
way to programatically invoke different parts of the commonignore
process.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "/dist/index.js",
   "author": "John Spence <jspence@carbonpay.app>",
   "license": "MIT",
+  "bin": {
+    "commonignore": "bin/commonignore"
+  },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "glob": "^7.1.6",
+    "thenify": "^3.3.1",
+    "thenify-all": "^1.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
