--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "commonignore -a",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
