--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.6",
   "description": "A common .ignore structure.",
   "main": "/dist/index.js",
-  "author": "John Spence <jspence@carbonpay.app>",
+  "author": "John Spence <john.spence.v@gmail.com>",
   "license": "MIT",
   "bin": {
     "commonignore": "bin/commonignore"
