--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "git-cz": "^4.7.1",
-    "husky": "^4.3.0"
+    "husky": "^4.3.0",
+    "prettier": "^2.3.2"
   },
   "localDependencies": [
     "node-util"
